<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".app.activity.ArticleDetailActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/article_image"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:background="@color/primaryColorDark"
                android:contentDescription="article image"
                android:scaleType="centerCrop" />

            <ToggleButton
                android:id="@+id/like_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/article_image"
                android:layout_alignEnd="@+id/article_image"
                android:layout_margin="10dp"
                android:drawableStart="@drawable/toggle_like"
                android:textOff="@string/like"
                android:textOn="@string/unlike"
                android:visibility="gone" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/article_publish_date"
                style="@android:style/TextAppearance.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/article_title"
                style="@android:style/TextAppearance.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/placeholder_titel" />

            <TextView
                android:id="@+id/article_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_excerpt" />

            <Button
                android:id="@+id/read_more_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/read_more" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>

